--- a/css.css
+++ b/css.css
@@ -63,7 +63,14 @@ list-style:circle;
 
 li {
 padding-left:1px;
+}
 
+.logo{
+position:absolute;
+left:0px;
+top:5px;
+bottom:5px;
+width:20%;
 }
 
 a:link {
@@ -86,7 +93,10 @@ text-decoration:underline;
 }
 
 #DrStrange{
-width:100%;
+width:85%;
+height:300px;
+margin-left:18%;
+
 
 }
 
@@ -94,7 +104,7 @@ width:100%;
 position:relative;
 left:300px;
 bottom:22px;
-background-color:#edd0de;
+background-color:#dbb3ca;
 width:85px;
 height:30px;
 padding:7px 4px 0px 4px;
@@ -104,7 +114,7 @@ padding:7px 4px 0px 4px;
 position:relative;
 left:170px;
 bottom:60px;
-background-color:#edd0de;
+background-color:#dbb3ca;
 width:60px;
 height:30px;
 padding:7px 4px 0px 7px;
@@ -114,7 +124,7 @@ padding:7px 4px 0px 7px;
 #filmlink{
 position:relative;
 top:15px;
-background-color:#edd0de;
+background-color:#dbb3ca;
 width:120px;
 height:30px;
 padding:7px 4px 0px 6px;
@@ -133,9 +143,9 @@ padding:7px 4px 0px 6px;
 height:290px;
  }
 #sherlockwall{
-width:80%;
+width:85%;
 height:300px;
-margin-left:10%;
+margin-left:17%;
 }
 #movie1{
 position:absolute;
